[gd_scene load_steps=5 format=3 uid="uid://gamescene456"]

[ext_resource type="Script" path="res://scripts/controllers/game_controller.gd" id="1_gc"]
[ext_resource type="Script" path="res://scripts/controllers/player_controller.gd" id="2_pc"]
[ext_resource type="Texture2D" uid="uid://bshk8j4m2d3f" path="res://icon.svg" id="3_icon"]
[ext_resource type="Script" path="res://scripts/ui/retry_dialog.gd" id="4_retry"]

[node name="GameScene" type="Node2D"]
script = ExtResource("1_gc")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(100, 100)
script = ExtResource("2_pc")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_icon")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RetryDialog" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_retry")

[node name="Panel" type="Panel" parent="CanvasLayer/RetryDialog"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/RetryDialog/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/RetryDialog/Panel/VBoxContainer"]
layout_mode = 2
text = "Mission Failed
Retry with Higher Intelligence?"
horizontal_alignment = 1

[node name="RetryStandard" type="Button" parent="CanvasLayer/RetryDialog/Panel/VBoxContainer"]
layout_mode = 2
text = "Retry Standard (Free)"

[node name="RetryPro" type="Button" parent="CanvasLayer/RetryDialog/Panel/VBoxContainer"]
layout_mode = 2
text = "Retry Pro (Pay $)"

[connection signal="pressed" from="CanvasLayer/RetryDialog/Panel/VBoxContainer/RetryStandard" to="CanvasLayer/RetryDialog" method="_on_retry_standard_pressed"]
[connection signal="pressed" from="CanvasLayer/RetryDialog/Panel/VBoxContainer/RetryPro" to="CanvasLayer/RetryDialog" method="_on_retry_pro_pressed"]
[connection signal="retry_requested" from="CanvasLayer/RetryDialog" to="." method="_on_retry_requested"]
